<resources>
    <string name="app_name">元立方投资</string>
    <string name="account_page_title">"我的账户"</string>
    <string name="action_settings">Settings</string>
    <string name="agile_page_title">"元信宝"</string>
    <string name="bid_title">"我要投资"</string>
    <string name="borrow_detail_bidBtn">"立即投资"</string>
    <string name="borrow_detail_title">"项目详情"</string>
    <string name="common_loading1">"加载中... "</string>
    <string name="common_content_nodata_hint">"一大波保本保息的高息标正在来袭！"</string>
    <string name="common_topbar_left_report_btn_text">"右按钮"</string>
    <string name="common_topbar_right_adding_btn_text">"右＋"</string>
    <string name="connection_message_error">"当前网络不可用，请检查你的网络后重新进入"</string>
    <string name="error_view_ok_btn">"OK"</string>
    <string name="login_title">"登录"</string>
    <string name="product_page_title">"产品列表"</string>
    <string name="quick_report_title_name">"错误"</string>
    <string name="user_login_account_hint">"请输入手机号"</string>
    <string name="user_login_forget_password">"忘记密码"</string>
    <string name="user_login_password_lenth_hint">"密码为6~16位字母数字符合组合"</string>
    <string name="user_login_password_hint">"请输入密码"</string>
    <string name="user_login_phone_illegal">"手机号码格式错误"</string>
    <string name="user_login_register_immediately">"立即注册"</string>
    <string name="user_login_register_button_title">"完成"</string>
    <string name="cube_ptr_pull_down">智慧城市投资运营专家</string>
    <string name="cube_ptr_pull_down_to_refresh">下拉刷新</string>
    <string name="cube_ptr_refreshing">正在刷新</string>
    <string name="cube_ptr_refresh_complete">刷新完成</string>
    <string name="cube_ptr_release_to_refresh">智慧城市投资运营专家</string>
    <string name="cube_ptr_last_update">专注市政基建项目投资</string>
    <string name="cube_ptr_seconds_ago"></string>
    <string name="cube_ptr_minutes_ago"></string>
    <string name="cube_ptr_hours_ago"></string>
    <string name="recharge_prompt">"温馨提示：汇付快捷充值目前支持11家银行..."</string>
    <string name="recharge_rule1">1.元立方充值过程免费，无任何手续费。</string>
    <string name="recharge_rule2">2.为保证您的资金安全，资金账户由汇付天下进行第三方托管。</string>
    <string name="recharge_rule3">3.只能绑定一张银行卡作为快捷卡，且只可以提现到该快捷卡，一经绑定，其余银行卡自动解绑。</string>
    <string name="recharge_rule4">4.为了您的资金安全，更换快捷卡需人工审核，请选择常用的银行卡作为快捷卡。</string>
    <string name="recharge_rule5">5.快捷支付服务由汇付天下提供。</string>
    <string name="recharge_propmt">*充值最低1元起，每天低于1000元的充值不得超过2笔。\n*不收取手续费。\n*工商银行、招商银行和华夏银行的最低充值金额须大于2元，低于2元将导致充值失败。</string>
    <string name="yuanmoney_rule1">1.元政盈系列产品(即定期投资产品)均可使用元金币；</string>
    <string name="yuanmoney_rule2">2.元金币使用步骤：</string>
    <string name="yuanmoney_rule3">(1)用户进入所投项目的页面，输入投资本金，系统将自动显示用户可用的元金币数量，默认最高可使用数量；\n(2)选择您想使用的元金币，及使用元金币的数量；\n(3)成功使用元金币投资后，
    实际投资本金等于原投资本金减去元金币抵扣的金额；\n(4)元金币抵扣的金额根据不同标的、不同比例而定。</string>
    <string name="yuanmoney_rule4">3.元金币应在载明的有效期内使用，过期作废。</string>
    <string name="withdraw_rule1">1.身份认证、银行卡均设置成功后，才能进行提现操作。</string>
    <string name="withdraw_rule2">2.预计到账时间为T+1个工作日，实际到账时间请以各个银行到账时间为准。</string>
    <string name="withdraw_rule3">3.提现必须为银行借记卡，不支持存折、信用卡提现。</string>
    <string name="withdraw_rule4">4.资金到达用户账户的当日（包括双休日法定节假日）即可发起提现申请。</string>
    <string name="withdraw_rule5">5.平台不触及用户资金账户，为防止套现，所充资金未经投资提现收取管理费0.5%每笔，不满2元时则收取2元一笔。</string>
    <string name="withdraw_rule6">6.所充资金经投标回款后提现收取手续费2元每笔。（暂时由元立方金服平台垫付）</string>
    <string name="withdraw_rule7">7.单笔提现金额不低于100元，单日提现上限为100万元。</string>
    <string name="withdraw_banding_card"><u>立即绑卡</u></string>
    <string name="withdraw_banding_propmt">\n为了账户安全，账户资金采用同卡进出的方式，请通过认证支付绑定银行卡，再进行提现操作。</string>
    <string name="transpwd_setting_prompt">\n1.交易密码是供用户在提现申请操作时使用。\n2.初始交易密码为登录密码。\n3.为了您的交易安全，请将交易密码和登录密码设置成不同的密码。</string>
    <string name="registe_agreement_text1">  元立方平台（网址：www.ylfcf.com，以下简称“平台”）所提供的各项服务的所有权和运作权均归【深圳元立方金融服务有限公司】(下简称“元立方”）所有。元立方平台会员服务协议（以下简称“本协议”）系由会员与元立方就平台的各项服务所订立的相关权利义务规范。本协议在会员和元立方间具有合同上的法律效力。元立方在此特别提醒您认真阅读、充分理解本协议各条款，特别是其中所涉及的免除及限制元立方责任的条款、对会员权利限制条款等。请您审慎阅读并选择接受或不接受本协议。除非您接受本协议所有条款，否则您无权使用元立方于本协议下所提供的服务。您一经注册或使用平台即视为对本协议全部条款已充分理解并完全接受。如有违反而导致任何法律后果的发生，您将以自己的名义独立承担相应的法律责任。\n</string>
    <string name="registe_agreement_1z_1t">元立方服务是由元立方通过元立方平台（网址：www.ylfcf.com）向其会员提供的服务，具体服务内容主要包括：交易信息发布、提供交易管理服务、提供客户服务等，具体服务内容详情以元立方届时提供的服务内容为准。\n</string>
    <string name="registe_agreement_1z_2t">在本协议履行过程中，元立方可根据情况对本服务协议进行修改。有关本协议的任何内容发生变动，元立方将通过平台公布最新的服务协议，会员认可并同意，元立方将最新的协议发布在平台即履行了向会员的告知义务，本协议一经发布立即对所有会员产生效力，会员承诺及时查阅相关信息，并认可元立方不再向会员作个别通知。如果会员不同意元立方对本服务协议所做的修改，会员有权停止使用平台服务。如果会员继续使用平台服务，则视为会员接受元立方对本服务协议所做的修改，并应遵照修改后的协议执行。\n</string>
    <string name="registe_agreement_1z_3t">元立方对于会员的通知及任何其他的协议、告示或其他关于会员使用会员账户及服务的通知，会员同意平台可通过平台公告、电子邮件、手机短信、无线通讯装置等电子方式等方式进行，会员同意该等通知于发送之日视为已送达收件人。前述通知元立方以会员向平台提交的通讯信息进行发送，会员变更通讯信息的，应当及时向平台提交相关变更信息，否则因信息变更导致会员无法收到相关通知的，由会员自行承担责任。因信息传输等原因导致会员未在前述通知发出当日收到该等通知的，元立方不承担责任。\n</string>
    <string name="registe_agreement_1z_4t">元立方可以依其合理判断暂时停止提供、限制或改变平台对会员的服务，只要会员仍然使用平台服务，即表示会员仍然同意本服务协议。元立方承诺尽最大努力恢复对会员的服务，若会员因自身违法、违规操作平台或造成平台及其他会员损失等情况导致平台停止对其提供服务的，会员同意在前述情况或行为未予纠正之前，元立方有权不恢复对会员的服务。\n</string>
    <string name="registe_agreement_2z_5t">元立方的会员是指符合中华人民共和国法律法规规定的具有完全民事权利和民事行为能力，能够独立承担民事责任的自然人或法人。在使用元立方服务前，会员必须先在平台上进行实名注册。\n</string>
    <string name="registe_agreement_2z_6t_1d">1、会员必须依元立方要求提示提供会员本人的真实、最新、有效及完整的资料。</string>
    <string name="registe_agreement_2z_6t_2d">2、会员有义务维持并及时更新会员的资料，确保其为会员本人的资料，且真实、最新、有效及完整。若会员提供任何错误、虚假、过时或不完整的资料，或者元立方依其独立判断怀疑资料为错误、虚假、过时或不完整，元立方有权暂停或终止会员的会员账户，并拒绝会员使用平台的部份或全部功能。在此情况下，元立方不承担任何责任，并且会员同意承担因此所产生的直接或间接的任何支出或损失。</string>
    <string name="registe_agreement_2z_6t_3d">3、如因会员未及时更新基本资料，导致平台无法提供或提供时发生任何错误，会员不得将此作为取消交易或拒绝付款的理由，元立方亦不承担任何责任，所有后果应由会员承担。</string>
    <string name="registe_agreement_2z_6t_4d">4、会员承诺通过会员注册的平台账户所作出的所有行为和指令均是会员的真实意思表示，会员不得将平台账户出借或授权他人使用，若会员擅自将平台账户出借或授权他人使用、或因保管不善导致账户丢失、被盗用等情况所造成的损失由会员自行承担，且会员应当承担由会员账户所执行的行为和指令所产生的法律责任。</string>
    <string name="registe_agreement_2z_6t_5d">5、会员同意元立方可通过合法途径搜集或核实会员的信息，并按照本协议的约定进行使用或披露。\n</string>
    <string name="registe_agreement_3z_7t">元立方服务内容主要包括根据会员需求发布交易信息、提供交易管理服务、提供客户服务等，具体详情以平台届时提供的服务内容为准。元立方服务的部分内容需要会员根据元立方要求完成身份认证及银行卡认证后提供，未进行身份认证及/或银行卡认证的会员将无法使用该部分平台服务。因未能完成认证而无法享受平台服务造成的损失，元立方不承担任何责任。\n</string>
    <string name="registe_agreement_3z_8t">元立方将为会员提供信息发布服务。会员确认元立方向会员提供的各种信息及资料仅为会员进行交易的参考，会员应依其独立判断做出交易决策。会员依据元立方提供的信息进行交易的，产生的风险由会员自行承担，会员确认元立方不对会员进行交易的本金、收益或其他权益进行任何承诺或担保。会员无权因其采纳了元立方提供的信息或咨询而向元立方提出任何权利主张。在交易过程中，会员之间发生的纠纷，由纠纷各方自行解决，元立方不承担任何责任。\n</string>
    <string name="registe_agreement_3z_9t_1d">1、会员在元立方平台进行注册时将生成会员账户，会员账户将记载会员在平台的活动，上述会员账户是会员登陆平台的唯一账户。</string>
    <string name="registe_agreement_3z_9t_2d">2、会员保证并承诺通过平台进行交易的资金来源合法。</string>
    <string name="registe_agreement_3z_9t_3d">3、会员确认，会员在平台上按元立方服务流程所确认的交易状态，将成为元立方为会员进行相关交易或操作（包括但不限于支付或收取款项、冻结资金、订立合同等）的不可撤销的指令。会员同意相关指令的执行时间以元立方在元立方系统中进行实际操作的时间为准。会员同意元立方有权依据本协议及/或元立方相关纠纷处理规则等约定对相关事项进行处理。会员未能及时对交易状态进行修改、确认或未能提交相关申请所引起的任何纠纷或损失由会员自行负责，元立方不承担任何责任。</string>
    <string name="registe_agreement_3z_9t_4d">4、会员了解元立方并不是银行或金融机构，按照中国法律规定，元立方不提供“即时”金额转账服务，会员同意元立方对资金到账延迟不承担任何责任。</string>
    <string name="registe_agreement_3z_9t_5d">5、会员理解并同意，元立方向符合条件的会员提供服务。元立方对在平台上进行交易行为不承担任何责任，会员因交易行为导致的损失（包括但不限于利息、手续费等损失）由会员自行承担，元立方不承担责任。</string>
    <string name="registe_agreement_3z_9t_6d">6、会员通过平台进行各项交易或接受交易款项时，若会员未遵从本服务协议条款或元立方公布的交易规则中的操作指示，元立方不承担任何责任。若发生上述状况而款项已先行拨入会员账户下，会员同意元立方有权直接从相关会员 账户中扣回款项及禁止会员要求支付此笔款项之权利。此款项若已汇入会员的银行账户，会员同意元立方有向会员事后索回的权利，由此产生的追索费用由会员承担。</string>
    <string name="registe_agreement_3z_9t_7d">7、元立方有权基于交易安全等方面的考虑不时设定涉及交易的相关事项，包括但不限于交易限额、交易次数等，会员了解元立方的前述设定可能会对交易造成一定不便，对此没有异议。</string>
    <string name="registe_agreement_3z_9t_8d">8、如果元立方发现了因系统故障或其他任何原因导致的处理错误，无论有利于元立方还是有利于会员，元立方都有权纠正该错误。如果该错误导致会员实际收到的款项多于应获得的金额，则无论错误的性质和原因为何，元立方保留纠正不当执行的交易的权利，会员应根据元立方向会员发出的有关纠正错误的通知的具体要求返还多收的款项或进行其他操作。会员理解并同意，会员因前述处理错误而多付或少付的款项均不计利息，元立方不承担因前述处理错误而导致的任何损失或责任（包括会员可能因前述错误导致的利息、汇率等损失）。\n</string>
    <string name="registe_agreement_3z_10t_1d">1、银行卡认证：为使用元立方或元立方委托的第三方机构提供的充值、取现、代扣等服务，会员应按照服务提供方规定的流程提交以会员本人名义登记的有效银行借记卡等信息，经由服务提供方审核通过后，会将会员的账户与前述银行账户进行绑定。如会员未按照服务提供方规定提交相关信息或提交的信息错误、虚假、过时或不完整，或者服务提供方有合理的理由怀疑会员提交的信息为错误、虚假、过时或不完整，服务提供方有权拒绝为会员提供银行卡认证服务，会员因此未能使用充值、取现、代扣等服务而产生的损失自行承担。</string>
    <string name="registe_agreement_3z_10t_2d">2、充值：会员可使用元立方指定的方式向会员账户充入资金，用于通过平台进行交易。</string>
    <string name="registe_agreement_3z_10t_3d">3、代收/代付：元立方按照其平台当时向会员开放的功能提供代收/代付服务，自行或委托第三方机构代为收取其他会员或元立方合作的担保公司等第三方向会员的账户支付的本息、代偿金等各类款项，或者，将会员账户里的款项支付给会员指定的其他方。元立方不保证提供的前述服务符合会员的期望。</string>
    <string name="registe_agreement_3z_10t_4d">4、取现：会员可以通过平台当时开放的取现功能将会员账户中的资金转入经过认证的银行卡账户中。元立方将于收到会员的前述指示后，尽快通过第三方机构将相应的款项汇入会员经过认证的银行卡账户（根据会员提供的银行不同，会产生汇入时间上的差异）。</string>
    <string name="registe_agreement_3z_10t_5d">5、查询：元立方将对会员在平台的所有操作进行记录，不论该操作之目的最终是否实现。会员可以通过会员账户实时查询会员账户名下的交易记录。会员理解并同意会员最终收到款项的服务是由会员经过认证的银行卡对应的银行提 供的，需向该银行请求查证。会员理解并同意通过平台查询的任何信息仅作为参考，不作为相关操作或交易的证据或依据；如该等信息与元立方记录存在任何不一致，应以元立方提供的书面记录为准。会员了解，上述充值、代收/代付及取现服务涉及元立方与银行、担保公司、第三方支付机构等第三方的合作。会员同意：(a) 受银行、担保公司、第三方支付机构等第三方仅在工作日进行资金代扣及划转的现状等各种原因所限，元立方不对前述服务的资金到账时间做任何承诺，也不承担与此相关的责任，包括但不限于由此产生的利息、货币贬值等损失；(b) 一经会员使用前述服务，即表示会员不可撤销地授权元立方进行相关操作，且该等操作是不可逆转的，会员不能以任何理由拒绝付款或要求取消交易。 就前述服务，元立方暂不会向会员收取费用，但会员应按照第三方的规定向第三方支付费用，具体请见第三方网站的相关信息。会员与第三方之间就费用支付事项产生的争议或纠纷，与元立方无关。</string>
    <string name="registe_agreement_3z_10t_6d">6、会员每次使用元立方服务应直接登录平台或使用元立方提供的链接登陆元立方平台 （网址：http://www.ylfcf.com, 如元立方以公告等形式发布新的网址，请届时登陆新的网址），而不要通过邮件或其他网站提供的链接登录。会员每次拨打元立方客户电话应拨打元立方官方网站提供的客服电话400-150-1568（如元立方以公告等形式发布新的客服电话，请届时拨打新的客服电话），而不要拨打其他任何电话。</string>
    <string name="registe_agreement_3z_10t_7d">7、会员同意，元立方有权在提供元立方服务过程中以各种方式投放各种商业性广告或其他任何类型的商业信息（包括但不限于在平台的任何页面上投放广告），并且，会员同意接受元立方通过电子邮件或其他方式向会员发送商品促销或其他相关商业信息。\n</string>
    <string name="registe_agreement_3z_11t_1d">1、在元立方平台交易需订立的合同采用电子合同方式。会员使用会员账户登录平台后，根据元立方的相关规则，以会员账户ID在平台通过点击确认或类似方式签署的电子合同即视为会员本人真实意愿并以会员本人名义签署的合同，具有法律效力。个人会员应妥善保管自己的账户密码等账户信息，会员通过前述方式订立的电子合同对合同各方具有法律约束力，会员不得以其账户密码等账户信息被盗用或其他理由否认已订立的合同的效力或不按照该等合同履行相关义务。</string>
    <string name="registe_agreement_3z_11t_2d">2、会员根据本协议以及元立方的相关规则签署电子合同后，不得擅自修改该合同。</string>
    <string name="registe_agreement_3z_11t_3d">3、会员不得私自仿制、伪造在元立方平台上签订的电子合同或印章，不得用伪造的合同进行招摇撞骗或进行其他非法使用，否则由会员自行承担责任。\n</string>
    <string name="registe_agreement_4z_12t">会员了解并认可，任何通过平台进行的交易并不能避免以下风险的产生，会员签署本协议即意味着会员知晓并愿意承以下风险，会员应根据实际情况衡量自身的风险承受能力。元立方不能也没有义务为如下风险负责：</string>
    <string name="registe_agreement_4z_12t_1d">1、宏观经济风险：因宏观经济形势变化，可能引起交易价格等方面的异常波动，会员有可能遭受损失。</string>
    <string name="registe_agreement_4z_12t_2d">2、政策风险：有关法律、法规及相关政策、规则发生变化，可能引起交易价格等方面异常波动，会员有可能遭受损失。</string>
    <string name="registe_agreement_4z_12t_3d">3、违约风险：因其他交易方无力或无意愿按时足额履约，会员有可能遭受损失。</string>
    <string name="registe_agreement_4z_12t_4d">4、利率风险：市场利率变化可能对购买或持有产品的实际收益产生影响。</string>
    <string name="registe_agreement_4z_12t_5d">5、不可抗力因素导致的风险。</string>
    <string name="registe_agreement_4z_12t_6d">6、因会员的过错导致的任何损失，该过错包括但不限于：决策失误、操作不当、遗忘或泄露密码、密码被他人破解、会员使用的计算机系统被第三方侵入、会员委托他人代理交易时他人恶意或不当操作而造成的损失。</string>
    <string name="registe_agreement_4z_12t_7d">7、其他因非元立方原因所导致的损失和风险。\n</string>
    <string name="registe_agreement_4z_13t">元立方不对任何会员及/或任何交易提供任何明示、暗示或约定的担保或条件。元立方不能也不试图对会员发布的信息进行控制或审核，对该等信息，元立方不承担任何形式的证明、鉴定服务。平台仅作为会员之间进行相关交易的居间信息交流平台，为会员提供本协议约定的服务。会员依赖于其独立判断进行交易，应对其作出的行为承担全部责任。\n</string>
    <string name="registe_agreement_4z_14t">会员确认并知晓本协议并不能揭示会员通过平台进行交易的全部风险及市场的全部情形。会员在做出交易决策前，应全面了解相关交易，谨慎决策并自行承担全部风险。\n</string>
    <string name="pos_instruction_string1">
        （1）打开“POS充值”页面，输入充值金额后点击按钮生成付款码和订单号。\n
        （2）用户使用扫码枪或摄像头，快速扫描用户的二维码或手动录入订单号即可完成交易。
        </string>
    <string name="pos_instruction_string2">
        充值单笔下限：5万，上限：300万。具体支付限额以银行实时情况为准。</string>
    <string name="pos_instruction_string3">
        付款码和订单号的有效时间为1分钟且一次有效。\n
        为保证资金安全，请妥善保管您的付款码及订单号。\n
        （1）元立方支付付款二维码和订单号是元立方对您支付账户和银行账户进行扣款操作的重要依据，请您务必妥善保管付款二维码和订单号（包括付款条码二维码和订单号的图像信息和数字信息）的安全，不得随意对外提供。\n
        （2）任何因您未妥善保管付款二维码、订单号信息所导致的经济损失，由您自行承担。</string>
</resources>