<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/style_rect_fillet_filling_white">
    
    <TextView 
        android:id="@+id/withdraw_rule_pop_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="提现规则"
        android:textColor="@color/gray"
        android:textSize="@dimen/common_measure_20dp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/common_measure_20dp"/>
    
    <LinearLayout 
        android:id="@+id/withdraw_rule_pop_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_marginLeft="@dimen/common_measure_15dp"
        android:layout_marginRight="@dimen/common_measure_15dp"
        android:layout_marginTop="@dimen/common_measure_15dp"
        android:orientation="vertical">
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:textSize="@dimen/common_measure_18dp"
            android:textColor="@color/gray1"
            android:text="@string/withdraw_rule1"/>
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:textSize="@dimen/common_measure_18dp"
            android:textColor="@color/gray1"
            android:text="@string/withdraw_rule2"/>
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:textSize="@dimen/common_measure_18dp"
            android:textColor="@color/gray1"
            android:text="@string/withdraw_rule3"/>
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:textSize="@dimen/common_measure_18dp"
            android:textColor="@color/gray1"
            android:text="@string/withdraw_rule4"/>
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:textSize="@dimen/common_measure_18dp"
            android:textColor="@color/gray1"
            android:text="@string/withdraw_rule5"/>
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:textSize="@dimen/common_measure_18dp"
            android:textColor="@color/gray1"
            android:text="@string/withdraw_rule6"/>
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:textSize="@dimen/common_measure_18dp"
            android:textColor="@color/gray1"
            android:text="@string/withdraw_rule7"/>
        
    </LinearLayout>
    
    <View 
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_measure_1dp"
        android:background="@color/edittext_line_color"/>
    
    <Button 
        android:id="@+id/withdraw_rule_pop_btn"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/common_measure_60dp"
        android:layout_marginLeft="@dimen/common_measure_20dp"
        android:layout_marginRight="@dimen/common_measure_20dp"
        android:background="@null"
        android:gravity="center"
        android:textColor="@color/common_topbar_bg_color"
        android:textSize="@dimen/common_measure_20dp"
        android:text="我知道了"/>

</LinearLayout>

